--- a/NHH_netflix/angular.json
+++ b/NHH_netflix/angular.json
@@ -38,7 +38,9 @@
               "src/theme.less",
               "src/styles.scss",
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
