--- a/NHH_netflix/package.json
+++ b/NHH_netflix/package.json
@@ -27,6 +27,7 @@
     "ng-zorro-antd": "^17.3.0",
     "ngx-toastr": "^18.0.0",
     "owl.carousel": "^2.3.4",
+    "primeng": "^17.14.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
