--- a/NHH_netflix/package.json
+++ b/NHH_netflix/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.3",
     "express": "^4.18.2",
+    "firebase": "^10.11.0",
     "ng-zorro-antd": "^17.3.0",
     "ngx-toastr": "^18.0.0",
     "owl.carousel": "^2.3.4",
