--- a/NHH_netflix/firebase.json
+++ b/NHH_netflix/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "dist/nhh-netflix/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
